sign-upのデザインを少し修正

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,12 @@
 
 #new_user {
   text-align: center;
+  .form-style {
+    margin: 0 auto;
+  }
   .field {
-    text-align: right;
+  }
+  .sign-up-background {
+    background-image: image-url("hoge.png");
   }
 }
