--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,7 @@
-<div class="col-md-4 col-md-offset-4">
+<div class="col-md-4 col-md-offset-4 sign-up-background">
 
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {class: "form-horizontal"}) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {class: "form-style"}) do |f| %>
   <%= devise_error_messages! %>
 
   <h2>登録</h2>
