--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -45,12 +45,23 @@
     <%= f.email_field :wife_email %>
   </div>
 
+  <div class="field form-group">
+    <%= f.label :"wife_image"  %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= f.file_field :wife_image %>
+  </div>
+
   <hr>
 
   <div class="field form-group">
     <%= f.label :"結婚記念日" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <%= f.date_field :wedding_day %>
   </div>
+
+  <div class="field form-group">
+    <%= f.label :"family_image"  %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= f.file_field :family_image %>
+  </div>
+
   <div class="actions btn">
     <%= f.submit "登録する" %>
   </div>
@@ -58,3 +69,54 @@
 
 <%= render "users/shared/links" %>
 </div>
+
+<script type="text/javascript">
+$(function() {
+  $('#user_wife_image').after('<span id="wife_img"></span>');
+  $('#user_family_image').after('<span id="family_img"></span>');
+
+  // アップロードするファイルを選択
+  $('#user_wife_image').change(function() {
+    var file = $(this).prop('files')[0];
+
+    // 画像以外は処理を停止
+    if (! file.type.match('image.*')) {
+      // クリア
+      $(this).val('');
+      $('span').html('');
+      return;
+    }
+
+    // 画像表示
+    var reader = new FileReader();
+    reader.onload = function() {
+      var img_src = $('<img>').attr('src', reader.result).attr('style', 'width: 100px; height: 100px;');
+      $('span#wife_img').html(img_src);
+    }
+    reader.readAsDataURL(file);
+  });
+
+  // アップロードするファイルを選択
+  $('#user_family_image').change(function() {
+    var file = $(this).prop('files')[0];
+
+    // 画像以外は処理を停止
+    if (! file.type.match('image.*')) {
+      // クリア
+      $(this).val('');
+      $('span').html('');
+      return;
+    }
+
+    // 画像表示
+    var reader = new FileReader();
+    reader.onload = function() {
+      var img_src = $('<img>').attr('src', reader.result).attr('style', 'width: 100px; height: 100px;');
+      $('span#family_img').html(img_src);
+    }
+    reader.readAsDataURL(file);
+  });
+
+
+});
+</script>
