--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,7 +47,7 @@
             <h1 class="cover-heading"></h1>
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Sign Up</a>
+						  <%= link_to "Sign Up", new_user_registration_path, { :class => "btn btn-lg btn-default" }  %>
             </p>
           </div>
         </div>
