--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,7 +46,7 @@ body {
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
-.site-wrapper-inner {
+.site-wrapper-inner#home {
   display: table-cell;
   vertical-align: top;
   background-image: url("mother2.jpg");
