branchページ完成

--- a/app/views/branch/index.html.erb
+++ b/app/views/branch/index.html.erb
@@ -16,14 +16,19 @@
 
     <div class="site-wrapper">
 
-      <div class="site-wrapper-inner">
+      <div class="site-wrapper-inner" id="branch">
 
         <div class="cover-container">
           <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
+						<h1 class="cover-heading">一緒に居る女性は<br>奥さんですか?</h1>
+						<!--
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+						-->
+						<p class="lead"><br><br><br><br><br><br><br><br><br><br></p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+						<a href="#" class="btn btn-lg btn-default">&nbsp;はい&nbsp;</a>
+						<a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+							<a href="#" class="btn btn-lg btn-default">いいえ</a>
             </p>
           </div>
 
