--- a/app/assets/stylesheets/branch.scss
+++ b/app/assets/stylesheets/branch.scss
@@ -47,9 +47,14 @@ body {
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
-.site-wrapper-inner {
+.site-wrapper-inner#branch {
   display: table-cell;
   vertical-align: top;
+  background-image: url("couple.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 auto;
+
 }
 .cover-container {
   margin-right: auto;
