--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="row">
 <div class="col-md-4 col-md-offset-4 sign-up-background">
 
 
@@ -6,61 +7,63 @@
 
   <h2>登録</h2>
   <div class="field form-group">
-    <%= f.label :"名前" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <%= f.text_field :name, autofocus: true %>
+		<%= f.label :"　　　　　名前:" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	  <%= f.text_field :name, autofocus: true %>
   </div>
 
   <div class="field form-group">
-    <%= f.label :"メールアドレス" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= f.label :"メールアドレス:" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <%= f.email_field :email %>
   </div>
 
   <div class="field form-group">
     <%= f.label :"パスワード" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %>文字)</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <em>(<%= @minimum_password_length %>文字)</em>:&nbsp;&nbsp;&nbsp;&nbsp;
     <% end %>
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field form-group">
-    <%= f.label :"確認用" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= f.label :"確認用:" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="field form-group">
-    <%= f.label :"独身ですか?" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;はい<%= f.radio_button 'single', 'true', {} %>&nbsp;&nbsp;&nbsp;&nbsp;
-    いいえ<%= f.radio_button 'single', 'false', {} %>
+    <%= f.label :"独身ですか?" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;はい&nbsp;&nbsp;<%= f.radio_button 'single', 'true', {} %>&nbsp;&nbsp;&nbsp;&nbsp;
+    いいえ&nbsp;&nbsp;<%= f.radio_button 'single', 'false', {} %>&nbsp;&nbsp;&nbsp;
   </div>
 
   <hr>
 
   <div class="field form-group">
-    <%= f.label :"奥様の名前" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= f.label :"奥様の名前:" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <%= f.text_field :wife_name %>
   </div>
 
   <div class="field form-group">
-    <%= f.label :"奥様のメルアド"  %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<%= f.label :"奥様のメルアド:"  %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <%= f.email_field :wife_email %>
   </div>
-
-  <div class="field form-group">
-    <%= f.label :"wife_image"  %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <%= f.file_field :wife_image %>
+	
+	<div class="field form-group">
+		<%= f.label :"結婚記念日:" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= f.date_field :wedding_day %>
   </div>
 
-  <hr>
+	<hr>
 
   <div class="field form-group">
-    <%= f.label :"結婚記念日" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <%= f.date_field :wedding_day %>
+		<%= f.label :"wife_image" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= f.file_field :wife_image %>
   </div>
 
   <div class="field form-group">
     <%= f.label :"family_image"  %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <%= f.file_field :family_image %>
   </div>
+
+	<hr>
 
   <div class="actions btn">
     <%= f.submit "登録する" %>
@@ -120,3 +123,4 @@ $(function() {
 
 });
 </script>
+</div>
