文言の変更

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,14 +23,16 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-							<h3 class="masthead-brand">あなたはそれでもラブホテルを愛しますか？</h3>
+							<h3 class="masthead-brand">あなたは<br>隣の人を愛しますか？</h3>
             </div>
           </div>
 
           <div class="inner cover">
             <h1 class="cover-heading"></h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+						<br><br><br><br>
+						<p class="lead">あなたの帰りを遅くまで待っている妻がいます。あなたの帰りを楽しみに待っている子がいます。あなたを思う大切な方のためにこのサービスを<br>御利用ください。</p>
             <p class="lead">
+						  <br><br>
 						  <%= link_to "Sign Up", new_user_registration_path, { :class => "btn btn-lg btn-default" }  %>
             </p>
           </div>
