--- a/app/views/uwaki/index.html.erb
+++ b/app/views/uwaki/index.html.erb
@@ -46,8 +46,8 @@
           <img class="first-slide" src="<%= asset_path "weding.jpg" %>" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+							<h1><code>20○○年 ○月○日</code></h1>
+							<p><code>○○さんは、妻、○○さんと結婚式をあげました。両家の家族、友人、今までにお二人が関わられた大変多くの方々に祝福された結婚式。<br>それはそれは幸せな結婚式でした。</code></p>
             </div>
           </div>
         </div>
@@ -66,8 +66,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					<h2 class="featurette-heading">あれから○年。<br><span class="text-muted">あなたを信じ、あなたの<br>帰りを待つ妻がいます。</span></h2>
+					<p class="lead">遅くまで仕事を頑張ってるのかな?<br>最近、寒いけど体調大丈夫かな?<br>奥さんはあなたを一番に考えます。</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="<%= asset_path "yome.jpg" %>" alt="Generic placeholder image">
@@ -78,8 +78,8 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					<h2 class="featurette-heading">パパまだかなー？<br><span class="text-muted">今日も帰り遅いのかな?</span></h2>
+					<p class="lead">何も知らないお子さんは、パパに会いたい気持ちを堪えて、遅くまで仕事を頑張っているはずの<br>あなたの帰りを待ってます。<br>そう、おこさんは何も知らないのです。</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" src="<%= asset_path "girl.jpg" %>" alt="Generic placeholder image">
@@ -90,8 +90,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					<h2 class="featurette-heading">楽しかったあの頃。<br><span class="text-muted">今からでも取り戻せる。</span></h2>
+					<p class="lead">家族皆でお弁当を持って行ったピクニック。<br>子供の頑張っている姿を見た運動会。<br>毎日一緒に並んで食べた晩御飯<br>取り戻すのは今からでも遅くない。</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="<%= asset_path "family.jpg" %>" alt="Generic placeholder image">
@@ -106,9 +106,9 @@
           <img class="first-slide" src="<%= asset_path "weding.jpg" %>" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+							<h1>それでも、<br>あなたは隣の人を愛しますか?</h1>
+							<p><br><br><br><br><br><br></p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">はい、もちろん！</a></p>
             </div>
           </div>
         </div>
