アドレスの取得

--- a/app/views/uwaki/index.html.erb
+++ b/app/views/uwaki/index.html.erb
@@ -48,6 +48,9 @@
             <div class="carousel-caption">
 							<h1><code>20○○年 ○月○日</code></h1>
 							<p><code>○○さんは、妻、○○さんと結婚式をあげました。両家の家族、友人、今までにお二人が関わられた大変多くの方々に祝福された結婚式。<br>それはそれは幸せな結婚式でした。</code></p>
+              <h1>Example headline.</h1>
+              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <h1><%= @address %></h1>
             </div>
           </div>
         </div>
